--- a/module2_solution/css/style.css
+++ b/module2_solution/css/style.css
@@ -1,19 +1,67 @@
 * {
   box-sizing: border-box;
-}
+  margin-left: 0;
+  margin-right: 0; 
+ }
+
 h1 {
-  margin-bottom: 15px;
+  margin-top: 30px;
+  margin-bottom: 45px;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 175%;
+}
+
+body{
+  padding-left: 25px;
+  padding-right: 25px;
 }
 
 p {
   border: 1px solid black;
-  background-color: #A52A2A;
+  border-top: 0px;
+  border-right: 0px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: black;
+  width: 150px;
+  height: 40px;
+  margin: 0px;
+  margin-bottom: 10px;
+  float: right;
+  padding-top: 8px;
+  text-align: center;
+  font-size: 125%;
+}
+ div#container{
+  border: 1px solid black;
+  background-color: #6495ED;
   width: 90%;
-  height: 150px;
-  margin-right: auto;
+  height: 200px;
   margin-left: auto;
-  font-family: Helvetica;
+  margin-right: auto;
+  margin-bottom: 25px;
+}
+
+#p1 {
+  background-color: #FF8C00;
+}
+
+#p2 {
+  background-color: #A52A2A;
   color: white;
+}
+
+#p3 {
+  background-color: #DA70D6;
+}
+
+section {
+  clear: right;
+  height: 138px;
+  overflow: auto;
+  padding-left: 8px;
+  padding-right: 8px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Simple Responsive Framework. */
@@ -22,89 +70,36 @@ p {
 }
 
 /********** Large devices only **********/
-@media (min-width: 1200px) {
-  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+@media (min-width: 992px) {
+  .col-lg-4, .col-lg-6{
     float: left;
-    border: 1px solid green;
-  }
-  .col-lg-1 {
-    width: 8.33%;
-  }
-  .col-lg-2 {
-    width: 16.66%;
-  }
-  .col-lg-3 {
-    width: 25%;
   }
   .col-lg-4 {
     width: 33.33%;
   }
-  .col-lg-5 {
-    width: 41.66%;
-  }
   .col-lg-6 {
     width: 50%;
-  }
-  .col-lg-7 {
-    width: 58.33%;
-  }
-  .col-lg-8 {
-    width: 66.66%;
-  }
-  .col-lg-9 {
-    width: 74.99%;
-  }
-  .col-lg-10 {
-    width: 83.33%;
-  }
-  .col-lg-11 {
-    width: 91.66%;
-  }
-  .col-lg-12 {
-    width: 100%;
   }
 }
 
 /********** Medium devices only **********/
-@media (min-width: 992px) and (max-width: 1199px) {
-  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+@media (min-width: 768px) and (max-width: 991px) {
+  .col-md-4, .col-md-6, .col-md-12 {
     float: left;
-    border: 1px solid green;
-  }
-  .col-md-1 {
-    width: 8.33%;
-  }
-  .col-md-2 {
-    width: 16.66%;
-  }
-  .col-md-3 {
-    width: 25%;
   }
   .col-md-4 {
     width: 33.33%;
   }
-  .col-md-5 {
-    width: 41.66%;
-  }
   .col-md-6 {
     width: 50%;
-  }
-  .col-md-7 {
-    width: 58.33%;
-  }
-  .col-md-8 {
-    width: 66.66%;
-  }
-  .col-md-9 {
-    width: 74.99%;
-  }
-  .col-md-10 {
-    width: 83.33%;
-  }
-  .col-md-11 {
-    width: 91.66%;
   }
   .col-md-12 {
     width: 100%;
   }
+
+  div.col-md-12 #container{
+    width: 95%;
+  }
+}
+
 }
